GNOME Bugzilla – Bug 639965
[vimeo] not usable in grilo-test-ui
Last modified: 2011-02-24 16:23:04 UTC
Created attachment 178746 [details] Dump of http traffic between grilo and vimeo's server Vimeo searches do not return any media in grilo-test ui There seems to be an authentication issue, see the attached traffic dump, vimeo returns the following error: <err code="303" expl="The oauth_signature passed was not valid" msg="Invalid signature" />
After some experimentation, it seems like the search fails in two cases: 1. if a search is done too early (for some value of early) 2. if a search has more than one word in it My first guess would be that (1) means that we might not wait for some kind of response for the authentication, and that (2) means we have something wrong in the way we generate the signature. Regarding (2), it seems that we don't urlencode the search, which might be related to the issue.
Fixed in git by commits 4e304c7..7b62968