vimeo: encode search text in get_videos_search_params()

This is to fix part 2. of https://bugzilla.gnome.org/show_bug.cgi?id=639965#c1